@@ -1,5 +1,7 @@
 Sun  May 29 2005	H. Wade Minter (minter@lunenburg.org)
      * Fixed a bulk-add bug.  Reported by Rob in Richmond.
+     * Add a status bar to the online search window.  Requested by
+       Lanny in Dallas.
 
 Sat  May 21 2005	H. Wade Minter (minter@lunenburg.org)
      * Stop trying to be smarter than XMLRPC::Lite and allow it to handle
